# ghc-typelits-natnormalise

./: .gitignore  .travis.meta.yml  .travis.yml  CHANGELOG.md  LICENSE  README.md  cabal.project  ghc-tynat-normalise.cabal  ghc-typelits-natnormalise.cabal  stack-ghc801.yaml  stack-head.yaml  stack-lts5.yaml  stack-lts9.yaml  stack.yaml
.github/workflows/: haskell-ci.yml
doc/: ghc-typelits-natnormalise-hcar.tex
src-ghc-9.12/GHC/TypeLits/: Normalise.hs
src-ghc-9.14/GHC/TypeLits/: Normalise.hs
src-ghc-9.4/GHC/TypeLits/: Normalise.hs
src-pre-ghc-9.4/GHC/TypeLits/: Normalise.hs
src/GHC/Extra/: Instances.hs
src/GHC/Type/: Instances.hs
src/GHC/TypeLits/: Normalise.hs
src/GHC/TypeLits/Normalise/: Compat.hs  SOP.hs  Unify.hs
tests/: AmbTests.hs  ErrorTests.hs  Generator.hs  ShouldError.hs  Tests.hs
tests/ShouldError/: Tasty.hs
